<resources>
    <string name="app_name">Music Clock Live Wallpaper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="wallpaper_description">Clock Live Wallpaper</string>
    <string name="wallpaper_lbl">Clock Live Wallpaper</string>
    <string name="display_hand_sec">Display hand seconds</string>
    <string name="set_clock_lw">SET CLOCK</string>
    <string name="display_hand_sec_txt">Display hand sec</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="show_screencast">Show tutorial</string>
    <string name="show_source">Show source code</string>
    <string name="other_apps">Other Apps</string>
    <string name="copy_ssaurel">(c) ssaurel</string>
    <string name="title_activity_show_clock_dial">ShowClockDialActivity</string>
    <string name="clock_style">Clock Style</string>
    <string name="title_activity_show_digitalstyle">ShowDigitalstyleActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_show_back_ground">ShowBackGroundActivity</string>
    <string name="title_activity_show_hand_style">ShowHandStyleActivity</string>
    <string name="hand_style">Hand Style</string>
    <string name="select_hand_style_for_clock">Select hand style for clock</string>
    <string name="select_background_for_clock">Select background for clock</string>
    <string name="select_digital_style_for_clock">Select digital style for clock</string>
    <string name="select_style_for_clock">Select style for clock</string>
    <string name="select_clock_dial_size">Set Size Of Clock</string>
    <string name="clockdial_size">Clock size</string>
    <string name="settings">SETTINGS</string>
    <string name="change_my_background">Change My Background</string>
    <string name="show_second">Show Second</string>
    <string name="show_hide_second_hand">Show/hide second hand</string>
    <string name="background">Background</string>
    <string name="title_activity_show_digital_style">ShowDigitalStyleActivity</string>
    <string name="settings_activity_label">Settings</string>
    <string name="show_background_activity_label">Background</string>
    <string name="show_clock_dial_activity_label">Clock Dial</string>
    <string name="show_digital_style_activity_label">Digital Style</string>
    <string name="show_hand_style_activity_label">Hand Style</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="music">Select Music</string>
    <string name="summary_music">Select alaram tone</string>
    <string name="music_activity_label">Music</string>
    <string name="information_activity_label">Information</string>
    <string name="every_hour">Every Hour</string>
    <string name="scheduled_time">Scheduled Time</string>
    <string name="set_time">Set Time</string>
    <string name="hour_time">00</string>
    <string name="colon">:</string>
    <string name="minute_time">00</string>
    <string name="select_music">Select Music</string>
    <string name="music_mp3">Music.mp3</string>
    <string name="alert">ALERT!</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="intestial_ad_unit_id">ca-app-pub-1265462765766610/4675367882</string>
    <string name="banner_ad_unit_id">ca-app-pub-1265462765766610/3198634680</string>
    <string name="app_id">789</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="how_to_set_alarm_at_every_hour">How to set alarm at every hour?</string>
    <string name="ans_to_set_alarm_every_hour">First, click on every hour checkbox and click on select music, choose your desired alarm tone and press ok.</string>
    <string name="how_to_set_alarm_at_scheduled_time">How to set alarm at scheduled time?</string>
    <string name="ans_to_set_alarm_scheduled_time">First, click on Scheduled time checkbox and click on select music, set your alarm time, choose your desired alarm tone from options available or from your gallery and press ok.</string>
    <string name="how_to_stop_alarm">How to stop alarm?</string>
    <string name="ans_to_stop_alarm">To stop alarm you to start the application and the music will be stopped automatically or you can mute your alarm volume and alarm gets stop when the tune gets completed.</string>
    <string name="what_time_formats_are_supported">What time formats are supported?</string>
    <string name="can_we_set_alarm_at_every_hour_and_scheduled_time_simultaneously">Can we set alarm at every hour and scheduled time simultaneously?</string>
    <string name="both_12_hours_and_24_hours_format_is_supported">Both 12 hours and 24 hours format is supported.</string>
    <string name="ans_to_set_two_alarms_together">Yes you can set both alarms together and both will work individually but when schedule time is equal to every hour at that time schedule time will be given priority and alarm will play accordingly.</string>


</resources>
