<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_music"
    android:background="@color/colorbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.music.clocklive.wallpaper.activities.MusicActivity"
    tools:showIn="@layout/activity_music">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_tiny"
        android:layout_marginRight="@dimen/margin_tiny"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium_large"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:paddingTop="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.music.clocklive.wallpaper.custom.CustomTextView
                    android:id="@+id/tvEveryHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_hour"
                    android:layout_centerVertical="true"
                    app:custom_font="avenir_medium"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:textColor="@color/colorPrimary"/>

                <CheckBox
                    android:id="@+id/cbEveryHour"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           app:cardElevation="@dimen/margin_medium"
           android:layout_marginLeft="@dimen/margin_medium"
           android:layout_marginRight="@dimen/margin_medium"
           app:cardCornerRadius="@dimen/margin_medium"
           android:layout_marginTop="@dimen/margin_medium"
           android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:layout_height="wrap_content">

            <com.music.clocklive.wallpaper.custom.CustomTextView
                android:id="@+id/tvScheduledTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheduled_time"
                android:layout_centerVertical="true"
                app:custom_font="avenir_medium"
                android:textSize="@dimen/text_size_xxlarge"
                android:textColor="@color/colorPrimary"/>

            <CheckBox
                android:id="@+id/cbScheduledTime"
                android:buttonTint="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
       </android.support.v7.widget.CardView>

        <com.music.clocklive.wallpaper.custom.CustomButton
            android:id="@+id/btnSetTime"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="wrap_content"
            android:background="@drawable/item_buttonshape"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.music.clocklive.wallpaper.custom.CustomEditText
                android:id="@+id/etHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:text="@string/hour_time"
                android:maxLength="2"
                android:clickable="false"
                android:textSize="@dimen/text_size_xlarge"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <com.music.clocklive.wallpaper.custom.CustomTextView
                android:id="@+id/tvColon"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:text="@string/colon"
                android:textStyle="bold"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size_xlarge"/>

            <com.music.clocklive.wallpaper.custom.CustomEditText
                android:id="@+id/etMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute_time"
                android:maxLength="2"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:inputType="number"
                android:textSize="@dimen/text_size_xlarge"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <com.music.clocklive.wallpaper.custom.CustomButton
                android:text="@string/select_music"
                android:background="@drawable/item_buttonshape"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:layout_height="wrap_content"
                android:id="@+id/btnSelectMusic"/>

            <com.music.clocklive.wallpaper.custom.CustomEditText
                android:id="@+id/etMusicFileName"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/margin_small_tiny"
                android:textColor="@color/colorPrimary"
                android:text="@string/music_mp3"
                android:layout_marginLeft="@dimen/margin_medium_large"
                android:layout_marginRight="@dimen/margin_medium_large"
                android:clickable="false"
                app:custom_font="avenir_medium"
                android:textSize="@dimen/text_size_xlarge"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlAds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>


</RelativeLayout>