<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.music.clocklive.wallpaper.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.music.clocklive.wallpaper.custom.CustomTextView
            android:id="@+id/tvSetClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_largest"
            android:onClick="setClockLw"
            android:background="@drawable/item_main_button_shape"
            app:custom_font="avenir_medium"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_xxlarge"
            android:paddingLeft="@dimen/margin_xxlarge"
            android:text="@string/set_clock_lw" />


        <com.music.clocklive.wallpaper.custom.CustomTextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/margin_medium"
            android:layout_marginTop="@dimen/marging_x2largest"
            android:onClick="showSettings"
            android:background="@drawable/item_main_button_shape"
            app:custom_font="avenir_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_xlarge"
            android:paddingLeft="@dimen/margin_xlarge"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_largest"
            android:text="@string/settings" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlAds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

</RelativeLayout>
